--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>12 tabelek apokalipsy</title>
+<link rel="shortcut icon" href="favicon.png" />    
 <style>
 .jeden {
     border: 1px solid black;
