--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>12 tabelek apokalipsy</title>
-<link rel="shortcut icon" href="favicon.png" />    
+<link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRitlZoJEMnV0HCyTUzpkLbpx4VEcElD7gPaD78ffxCOaliHM3b" />    
 <style>
 .jeden {
     border: 1px solid black;
